--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@anthropic-ai/sdk": "^0.59.0",
     "@auth/prisma-adapter": "^1.0.16",
+    "@google-cloud/speech": "^7.2.0",
+    "@google/generative-ai": "^0.24.1",
     "@prisma/client": "^5.7.1",
     "axios": "^1.6.2",
     "bcryptjs": "^2.4.3",
