--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "@anthropic-ai/sdk": "^0.59.0",
-    "@auth/prisma-adapter": "^1.0.16",
+    "@auth/prisma-adapter": "^1.6.0",
     "@google-cloud/speech": "^7.2.0",
     "@google/generative-ai": "^0.24.1",
     "@prisma/client": "^5.7.1",
@@ -24,7 +24,7 @@
     "mammoth": "^1.6.0",
     "multer": "^2.0.0-rc.3",
     "next": "15.4.6",
-    "next-auth": "^4.24.5",
+    "next-auth": "^5.0.0-beta.29",
     "openai": "^4.20.1",
     "pdf-parse": "^1.1.1",
     "prisma": "^5.7.1",
@@ -32,6 +32,7 @@
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
     "react-hot-toast": "^2.4.1",
+    "supports-color": "^10.1.0",
     "tailwind-merge": "^2.0.0"
   },
   "devDependencies": {
